change demo to user for better understanding the project structure
